--- a/index.html
+++ b/index.html
@@ -15,17 +15,18 @@
     <link rel="stylesheet" href="./static/css/bootstrap.min.css">
 
     <script type="text/javascript" src="./static/js/inicio.js"></script>
-    <script src="./static/js/bootstrap.bundle.min.js"></script>
+    <script type="text/javascript" src="./static/js/bootstrap.bundle.min.js"></script>
 </head>
 <body>
+
+<!-- MENU START -->
     <header class="header">
 
     <nav class="navbar navbar-expand-md navbar-white bg-white" aria-label="Fourth navbar example">
         <div class="container-fluid">
 
-            <div id="logo">
-                
-            </div>
+            <div id="logo"></div>
+            
             <a class="navbar-brand" href="/">
             <img src="./static/img/logo-fonobus-1.png" alt="Fono Bus">
             </a>
@@ -84,33 +85,35 @@
 
     </header>
 
+<!-- MENU END -->
+
 <main>
 
 <!-- Carrousel -->
 
 <section class="container">
 
-<div id="carouselExampleAutoplaying" class="carousel slide " data-bs-ride="carousel">
-    <div class="carousel-inner">
-      <div class="carousel-item active">
-        <img src="./static/img/bannerInicio.jpg" class="img-fluid rounded-pill" alt="Imagen 1">
-      </div>
-      <div class="carousel-item">
-        <img src="./static/img/fonobus_1.jpg" class="img-fluid rounded-pill" alt="Imagen 2">
-      </div>
-      <div class="carousel-item">
-        <img src="./static/img/fonobus_2.jpg" class="img-fluid rounded-pill" alt="Imagen 3">
-      </div>
+    <div id="carouselExampleAutoplaying" class="carousel slide " data-bs-ride="carousel">
+        <div class="carousel-inner">
+        <div class="carousel-item active">
+            <img src="./static/img/bannerInicio.jpg" class="img-fluid rounded-pill" alt="Imagen 1">
+        </div>
+        <div class="carousel-item">
+            <img src="./static/img/fonobus_1.jpg" class="img-fluid rounded-pill" alt="Imagen 2">
+        </div>
+        <div class="carousel-item">
+            <img src="./static/img/fonobus_2.jpg" class="img-fluid rounded-pill" alt="Imagen 3">
+        </div>
+        </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Next</span>
+        </button>
     </div>
-    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="prev">
-      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-      <span class="visually-hidden">Previous</span>
-    </button>
-    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="next">
-      <span class="carousel-control-next-icon" aria-hidden="true"></span>
-      <span class="visually-hidden">Next</span>
-    </button>
-  </div>
 
 </section>
 
